--- a/2000s/style.css
+++ b/2000s/style.css
@@ -1,27 +1,207 @@
-/* This is a CSS override! It overrides default values for ALL elements. */
-/* I highly recommend keeping this override in your code. */
+
+
 * {
-	box-sizing: border-box;
-	padding: 0;
-	margin: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-body {
-	background-color: yellow;
-	font-family: sans-serif;
+.nav {
+  position: fixed;
+  /* STUCK to top */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 65px;
+  background-color: black;
+  padding: 10px;
+  z-index: 1000;
+  /* stay above everything */
 }
+
+.nav a {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 10px 20px;
+
+  border: 2px solid rgb(0, 255, 213);
+  border-radius: 50px;
+
+
+}
+
+
+Body {
+  background-color: #000000;
+}
+
+
+
+
+
 h1 {
-	margin: 20px;
+  position: absolute;
+
+  color: #ffffff;
+  font-family: "map-roman-compressed", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 70px;
+  text-align: center;
+  position: sticky;
+
+  margin-top: 100px;
+  backdrop-filter: invert;
 }
-h2 {
-	margin: 20px;
+
+
+.author {
+  position: absolute;
+
+  color: #ff0000;
+  font-family: "map-roman-compressed", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 40px;
+  text-align: center;
+  z-index: 3;
+  position: sticky;
+
+
+  margin-top: 0;
+
+
 }
-p {
-	margin: 20px;
+
+.scroll-text {
+  position: absolute;
+  top: 400px;
+  /* adjust as needed to fit below subtitle */
+  right: 450px;
+  /* slight left alignment */
+  width: 820px;
+  z-index: 1;
+  /* BELOW rectangles */
 }
-ul {
-	margin: 20px;
+
+.scroll-text p {
+  position: absolute;
+  font-family: Arial, sans-serif;
+  font-size: 18px;
+  color: white;
+  text-align: left;
+  line-height: 1.6;
 }
-li {
-	margin: 20px;
+
+.rectangle1 {
+  position: absolute;
+
+  background-color: #ff00d9;
+
+}
+
+.rectangle2 {
+  position: absolute;
+
+  background-color: #22ffda;
+
+}
+
+.rectangle3 {
+  position: absolute;
+
+  background-color: #00ff04;
+
+}
+
+.rectangle4 {
+  position: absolute;
+
+  background-color: #6600ff;
+
+}
+
+.rectangle5 {
+  position: absolute;
+
+  background-color: #45b8ff;
+  animation: glitch 3s infinite;
+}
+
+@keyframes glitch {
+  0% {
+	transform: translate(0);
+	opacity: 0.2;
+  }
+
+  10% {
+	transform: translate(-2px, 2px);
+  }
+
+  20% {
+	transform: translate(2px, -2px);
+  }
+
+  30% {
+	transform: translate(-1px, 1px);
+	opacity: 0.4;
+  }
+
+  40% {
+	transform: translate(1px, -1px);
+  }
+
+  50% {
+	transform: translate(2px, 2px);
+	opacity: 0.3;
+  }
+
+  60% {
+	transform: translate(-2px, -2px);
+  }
+
+  70% {
+	transform: translate(1px, 1px);
+  }
+
+  80% {
+	transform: translate(-1px, -1px);
+  }
+
+  90% {
+	transform: translate(0);
+	opacity: 0.1;
+  }
+
+  100% {
+	transform: translate(0);
+	opacity: 0.3;
+  }
+}
+
+
+.rectangle6 {
+  background-color: #ffcc00;
+  position: absolute;
+}
+
+.rectangle7 {
+  background-color: #00eaff;
+  position: absolute;
+}
+
+.rectangle8 {
+  background-color: #ff44aa;
+  position: absolute;
+}
+
+.rectangle9 {
+  background-color: #39ff14;
+  position: absolute;
+}
+
+.rectangle10 {
+  background-color: #ff6f61;
+  position: absolute;
 }
