--- a/2000s/style.css
+++ b/2000s/style.css
@@ -36,7 +36,31 @@ Body {
   background-color: #000000;
 }
 
+.marquee-message {
+  position: absolute;
+  top: 73px; 
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  z-index: 10;
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: yellow;
+  text-align: left;
 
+ 
+  animation: marquee 20s linear 2; 
+}
+@keyframes marquee {
+  0% {
+    transform: translateX(100%);
+  }
+
+  100% {
+    transform: translateX(-100%);
+  }
+}
 
 
 
@@ -51,7 +75,7 @@ h1 {
   text-align: center;
   position: sticky;
 
-  margin-top: 100px;
+  margin-top: 120px;
   backdrop-filter: invert;
 }
 
@@ -76,9 +100,20 @@ h1 {
 
 .scroll-text {
   position: absolute;
-  top: 400px;
  
+  color: white;
   right: 450px;
+ 
+  width: 820px;
+  z-index: 1;
+ 
+}
+
+.scroll-text-2 {
+  position: absolute;
+
+  color: white;
+  left: 400px;
  
   width: 820px;
   z-index: 1;
@@ -93,6 +128,21 @@ h1 {
   text-align: left;
   line-height: 1.6;
 }
+.scroll-text-2 p {
+  position: absolute;
+  font-family: Arial, sans-serif;
+  font-size: 18px;
+  color: white;
+  text-align: left;
+  line-height: 1.6;
+}
+
+.scroll-text img{
+  position:absolute;
+ /* align-items: center;
+  align-content: center;*/
+}
+
 
 .rectangle1 {
   position: absolute;
